# aubo_description

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  ros1_xacro.sh  xacro.sh
launch/: aubo_viewer.launch.py  load_aubo.launch
meshes/: aubo_C3_39  aubo_C5_10J  aubo_E10_10  aubo_ES5_B1  aubo_ES5_B1_white  aubo_WJ2  aubo_i10H_B1  aubo_i10_11  aubo_i10_34  aubo_i12_30  aubo_i16_39  aubo_i20H_10  aubo_i20L_1900  aubo_i3_39  aubo_i5_13  aubo_i5_39  aubo_i7_30  aubo_iS20_21  aubo_iS25_29  aubo_iS35  aubo_iS35_10  aubo_iS7_B1
meshes/KW75B/collision/: link0.STL
meshes/KW75B/visual/: link0.3ds
meshes/KW75C/collision/: link0.STL
meshes/KW75C/visual/: link0.3ds
meshes/aubo_C3/visual/: link0.DAE  link1.3ds  link1.DAE  link2.3ds  link3.3ds  link3.DAE  link6.DAE
meshes/aubo_C5/visual/: link0.3ds  link1.3ds  link2.3ds  link3.3ds  link4.3ds  link5.3ds  link6.3ds
meshes/aubo_C5_39/visual/: link0.DAE  link1.3ds  link1.DAE  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.3ds  link5.DAE  link6.DAE
meshes/aubo_E10/visual/: link0.3ds  link0.DAE  link0.dae  link1.3ds  link1.DAE  (+16 more)
meshes/aubo_ES5_B0_white/: collision
meshes/aubo_i10H/: collision
meshes/aubo_i10H_white/: collision
meshes/aubo_i10_FB/: link0.3ds  link1.DAE  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.3ds  link5.DAE  link6.3ds  link6.DAE
meshes/aubo_i12H/: collision
meshes/aubo_i12H_white/: collision
meshes/aubo_i16H/: collision
meshes/aubo_i16H_white/: collision
meshes/aubo_i16_FB/: link0.DAE  link1.3ds  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.3ds  link5.DAE  link6.3ds  link6.DAE
meshes/aubo_i20_white/: collision
meshes/aubo_i27/: collision  visual
meshes/aubo_i3H/: collision
meshes/aubo_i3_FB/: link0.DAE  link1.3ds  link1.DAE  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.DAE  link6.DAE
meshes/aubo_i5-NET/: collision
meshes/aubo_i5H/: collision
meshes/aubo_i5L_FB/: link0.3ds  link0.DAE  link1.3ds  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link5.3ds
meshes/aubo_i5_FB/: link0.3ds  link1.3ds  link2.3ds  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.3ds  link5.DAE  link6.3ds
meshes/aubo_i7H/: collision
meshes/aubo_i7H_blue/: collision
meshes/aubo_i7H_white/: collision
meshes/aubo_iS20_A2/: collision
meshes/cf_SF6C1400X_6KG_QN/: README.MD
meshes/dyxd_A722_8KG_HC/: README.MD
meshes/iaubo_i20_FB/: link0.3ds  link0.DAE  link1.3ds  link1.DAE  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.3ds  link5.DAE  link6.3ds  link6.DAE
urdf/: KW75B.urdf  KW75C.urdf  aubo_C10.srdf  aubo_C10.urdf  aubo_C16_30.srdf  aubo_C16_30.urdf  aubo_C20_30.srdf  aubo_C20_30.urdf  aubo_C3.srdf  aubo_C3.urdf  aubo_C3_10.srdf  aubo_C3_10.urdf  aubo_C3_30.srdf  aubo_C3_30.urdf  aubo_C3_39.srdf  aubo_C3_39.urdf  aubo_C5.srdf  aubo_C5.urdf  aubo_C5_10.srdf  aubo_C5_10.urdf  aubo_C5_10J.srdf  aubo_C5_10J.urdf  aubo_C5_30.srdf  aubo_C5_30.urdf  aubo_C5_39.srdf  aubo_C5_39.urdf  aubo_E10.srdf  aubo_E10.urdf  aubo_E10_10.srdf  aubo_E10_10.urdf  aubo_E16_10.srdf  aubo_E16_10.urdf  aubo_E20_10.srdf  aubo_E20_10.urdf  aubo_E3.srdf  aubo_E3.urdf  aubo_E3_10.urdf  aubo_E5.srdf  aubo_E5.urdf  aubo_E5_10.srdf  (+248 more)
urdf/xacro/: aubo_i5.xacro
(+908 files in other folders)
