<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aubo_description</name>
  <version>1.3.3</version>
  <description>The aubo_description package</description>
  <author email="liug@our-robotics.com">Allen Liu</author>
  <maintainer email="liug@our-robotics.com">Allen Liu</maintainer>
  <url type="website">http://wiki.ros.org/aubo_description</url>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <exec_depend>urdf</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>

